[build-system]
# Our setup.py imports other things from this directory, meaning
# in needs to be on sys.path. That's not guaranteed in a PEP517 world;
# the __legacy__ build module makes that true. Ultimately we need to do that
# ourself (and/or continue to simplify our build system).
build-backend = "setuptools.build_meta:__legacy__"
requires = [
     "setuptools",
     "wheel",
     "Cython",
]